tidy up party names with forEach :feelsgood:

--- a/d3_version/index.html
+++ b/d3_version/index.html
@@ -55,15 +55,9 @@ function showResponse (response) {
         </form>
 
     <hr />
-<!--         <div>
-            <pre id="output">
-                <!-- content will appear here -->
-    <!--        </pre>
-        </div> -->
-
 
 <hr />
-
+<div id="chart"></div>
         
 
 
