--- a/d3_version/index.html
+++ b/d3_version/index.html
@@ -19,8 +19,29 @@ function showResponse (response) {
 
 
         <script src="ajax.js" type="text/javascript"></script>
+<!-- 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<style>
+
+  th {
+    font-size: 18px;
+  }
+  td {
+    font-size: 18px;
+
+  }
+  td.data {
+    font-weight: 600;
+    padding-left:20px;
+  }
+  #modal {
+    margin-left:20px;
+    z-index:1;
+    background: white;
+  }
+</style>
+
 
     </head>
     <body>
@@ -54,12 +75,19 @@ function showResponse (response) {
             </div>
         </form>
 
-    <hr />
+<div id="modal">
+        <table>
+    <tr>
+        <th>Totals</th>
+    </tr>
+    <tr><td>Democrats</td><td class="data"></td></tr>
+    <tr><td>Republicans</td><td class="data"></td></tr>
+    <tr><td>Independents</td><td class="data"></td></tr>
 
-<hr />
+</table>
+</div>
+
 <div id="chart"></div>
-        
-
 
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
