getting there! holy shit! :milky_way:

--- a/d3_version/index2.html
+++ b/d3_version/index2.html
@@ -96,13 +96,18 @@ function showResponse (response) {
 
 
     <script>
+data = [{count: 485, party: "Democrats"}, {count: 440, party: "Republicans"}];
+     console.log(data);
+
+function pushNewData(){
+    console.log("it works!");
+};
 
 (function() {
 
 
 
-      var data = [{count: 485, party: "Democrats"}, {count: 440, party: "Republicans"}];
-     console.log(data);
+
      var width = 960,
           height = 500,
           radius = Math.min(width, height) / 2;
