--- a/new-approach/index.html
+++ b/new-approach/index.html
@@ -67,8 +67,8 @@ var width = 960,
 var color = d3.scale.category20();
 
 var pie = d3.layout.pie()
-    .value(function(d) { return d.apples; })
-    .sort(null);
+    .value(function(d) { return d.count; });
+
 
 var arc = d3.svg.arc()
     .innerRadius(radius - 100)
@@ -80,14 +80,34 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-d3.json("data.json", function(error, data) {
-  console.log(data);
-  var path = svg.datum(data).selectAll("path")
+
+(function initialDraw(){
+  var initial = [{"party":"Democrats", "count":121}, {"party":"Republicans", "count":120}];
+
+  path = svg.datum(initial).selectAll("path")
       .data(pie)
     .enter().append("path")
       .attr("fill", function(d, i) { return color(i); })
-      .attr("d", arc)
-      .each(function(d) { this._current = d; }); // store the initial angles
+      .attr("d", arc);
+})();
+
+
+/*
+function drawChart(data) {
+
+  path = svg.datum(data).selectAll("path")
+      .data(pie)
+    .enter().append("path")
+      .attr("fill", function(d, i) { return color(i); })
+      .attr("d", arc);
+      
+      console.log(data);
+
+};
+*/
+
+
+
 
   // d3.selectAll("input")
   //     .on("change", change);
@@ -96,36 +116,27 @@ d3.json("data.json", function(error, data) {
   //   d3.select("input[value=\"oranges\"]").property("checked", true).each(change);
   // }, 2000);
 
-  function change() {
-    var value = this.value;
-    clearTimeout(timeout);
-    pie.value(function(d) { return d[value]; }); // change the value function
-    path = path.data(pie); // compute the new angles
-    path.transition().duration(750).attrTween("d", arcTween); // redraw the arcs
-  }
-});
-
-function type(d) {
-  d.apples = +d.apples;
-  d.oranges = +d.oranges;
-  return d;
-}
-
-// Store the displayed angles in _current.
-// Then, interpolate from _current to the new angles.
-// During the transition, _current is updated in-place by d3.interpolate.
-function arcTween(a) {
-  var i = d3.interpolate(this._current, a);
-  this._current = i(0);
-  return function(t) {
-    return arc(i(t));
+  function change(data) {
+    console.log(data);
+    // var value = svg[0][0].children[0].__data__.value;
+    // console.log(value);
+    // clearTimeout(timeout);
+    //pie.value(function(d) {console.log(d); return d.count; }); // change the value function
+    path = path.data(pie); 
+    console.log(path);// compute the new angles
+    path.attr("d", arc); // redraw the arcs
   };
-}
+
+
+
+
 
 </script>
 
 
 <script>
+// ajax request
+
 $(document).ready(function () {
 
 $('#phrase-lookup').submit(function(e){
@@ -146,14 +157,86 @@ var options = {
   dataType: 'jsonp'      
 };
 
-var request = $.ajax(endpoint, options).done(showResponse1, showResponse2);
+var request = $.ajax(endpoint, options).done(showResponse1, generateDataset);
 
 function showResponse1 (response) {
   console.log(response);
 };
 
-function showResponse2 (response) {
-//stuff goes here
+function generateDataset(dataset) {
+
+console.log(dataset);
+
+var myArray = dataset.results;
+
+          function convertParty(item){
+            
+            if (item.party == "R" || item.party == "Republican") {
+              item.party = "Republican";
+            } else if (item.party == "D" || item.party == "Democrat") {
+              item.party = "Democrat";
+            } else if (item.party = "ID" || item.party == "Independent") {
+              item.party = "Independent";
+            } else {
+              item.party = "N/A"
+            }
+
+          };
+
+          myArray.forEach(convertParty);
+
+          function republicans(item) {
+            return item.party == "Republican";
+          }
+
+          //total up republicans
+          var filterRepublicans = myArray.filter(republicans);
+
+          var totalRepublicans=0;
+          for (var i in filterRepublicans) { 
+            totalRepublicans += filterRepublicans[i].count; 
+          };
+
+          var republican = {party: "Republicans", count: 0};
+          republican.count = totalRepublicans;
+
+
+          //total up democrats
+          function democrats(item) {
+            return item.party == "Democrat";
+          };
+
+          var filterDemocrats = myArray.filter(democrats);
+
+          var totalDemocrats=0;
+          for (var i in filterDemocrats) { 
+            totalDemocrats += filterDemocrats[i].count; 
+          };
+
+          var democrat = {party: "Democrats", count: 0};
+          democrat.count = totalDemocrats;
+
+          //total up independents
+          function independents(item) {
+            return item.party == "Independent";
+          };
+
+          var filterIndependents = myArray.filter(independents);
+
+          var totalIndependents=0;
+          for (var i in filterIndependents) { 
+            totalIndependents += filterIndependents[i].count; 
+          };
+
+          var independent = {party: "Independents", count: 0};
+          independent.count = totalIndependents;
+
+          data = [];
+          data.push(democrat, republican, independent);
+
+          console.log(data);
+          //drawChart(data);
+          change(data);
 };
 
 });
